--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "sirv": "^0.4.0"
   },
   "devDependencies": {
+    "css-loader": "^2.1.1",
+    "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "sapper": "^0.26",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "svelte": "^3.0.0",
     "svelte-loader": "^2.9.0",
     "webpack": "^4.7.0"
