--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
+    "normalize.css": "^8.0.1",
     "polka": "^0.5.2",
     "sirv": "^0.4.2"
   },
