--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "TODO",
-  "description": "TODO",
+  "name": "svelte-toolkit-docs",
+  "description": "Documentation for svelte-toolkit, a collection of UI components for Svelte",
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
@@ -21,11 +21,11 @@
     "css-loader": "^2.1.1",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
-    "sapper": "^0.27.0",
+    "sapper": "^0.27.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "svelte": "^3.4.0",
-    "svelte-loader": "^2.13.3",
-    "webpack": "^4.31.0"
+    "svelte": "^3.4.2",
+    "svelte-loader": "^2.13.4",
+    "webpack": "^4.32.0"
   }
 }
