--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "sapper dev",
     "build": "sapper build",
     "export": "sapper export",
+    "move": "rimraf docs && move-cli __sapper__/export docs",
     "start": "node __sapper__/build",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
@@ -20,8 +21,10 @@
   },
   "devDependencies": {
     "css-loader": "^3.0.0",
+    "move-cli": "^1.2.1",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.3",
     "sapper": "^0.27.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
