--- a/package.json
+++ b/package.json
@@ -20,17 +20,20 @@
     "sirv": "^0.4.2"
   },
   "devDependencies": {
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.3.0",
     "move-cli": "^1.2.1",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^7.0.24",
+    "postcss-load-config": "^2.1.0",
     "rimraf": "^3.0.0",
-    "sapper": "^0.27.8",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^1.0.0",
-    "svelte": "^3.9.1",
+    "sapper": "^0.27.9",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.1",
+    "svelte": "^3.16.3",
     "svelte-loader": "^2.13.6",
-    "svelte-toolkit": "^0.0.11",
-    "webpack": "^4.39.2"
+    "svelte-preprocess": "^3.2.6",
+    "svelte-toolkit": "^0.1.0",
+    "webpack": "^4.41.2"
   }
 }
