--- a/package.json
+++ b/package.json
@@ -1,39 +1,22 @@
 {
   "name": "svelte-toolkit-docs",
   "description": "Documentation for svelte-toolkit, a collection of UI components for Svelte",
+  "type": "module",
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build",
-    "export": "sapper export --basepath svelte-toolkit-docs",
-    "move": "rimraf docs && move-cli __sapper__/export/svelte-toolkit-docs docs",
-    "start": "node __sapper__/build",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview"
   },
-  "dependencies": {
-    "compression": "^1.7.4",
-    "normalize.css": "^8.0.1",
-    "polka": "^0.5.2",
-    "sirv": "^1.0.12"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "css-loader": "^5.2.7",
-    "move-cli": "^1.2.1",
+    "@sveltejs/adapter-static": "next",
+    "@sveltejs/kit": "next",
     "node-sass": "^6.0.1",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.3.6",
-    "postcss-load-config": "^3.1.0",
-    "rimraf": "^3.0.2",
-    "sapper": "^0.29.2",
-    "sass-loader": "^10.2.0",
-    "style-loader": "^1.3.0",
     "svelte": "^3.42.1",
-    "svelte-loader": "^2.13.6",
     "svelte-preprocess": "^4.7.4",
-    "svelte-toolkit": "^0.6.0",
-    "webpack": "^4.46.0"
+    "svelte-toolkit": "^0.6.1"
   }
 }
